<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Need Blood</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="login">Log in</string>
    <string name="instructions">Login with Facebook</string>
    <string name="logout">Log out</string>
    <!-- <string name="applicationId">380615018626574</string> -->
    <string name="applicationId">360091654097401</string>
    <string name="app_id">360091654097401</string>
	<string-array name="blood_type">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>
	<string name="select_blood_type">Select Blood Type</string>
	<string name="select_blood_type_title">Please select your blood type</string>
	<string name="select_blood_type_desc">Kindly select your blood type, as this is important to us when there is urgent need of special type of blood.</string>
	<string name="ok">OK</string>
	<string name="submit">Submit</string>
	<string name="welcome">Welcome</string>
	<string name="user">user</string>
	<string name="refresh">Refresh</string>
	<string name="organiser">Organiser</string>
	<string name="event_date">Event Date</string>
	<string name="location">Location</string>
	<string name="other">Other</string>
	<string name="request_type">Special Blood Type Request</string>
	<string name="event_id">Event ID</string>
	<string name="event_title">Event Title</string>
	<string name="description">Description</string>
	<string name="select_date">Select Date</string>
	<string name="app_title">Welcome</string>
	<string name="version">Version 0.1.0110</string>
	<string name="quote1">Knowing that you help save a life</string>
	<string name="quote2">That Counts</string>
	<string name="software_organisation">PW &amp; Friend Organisation</string>
	<string name="starttime">Start Time</string>
	<string name="endtime">End Time</string>
	<string name="share">Share</string>
	<string name="about_us">About</string>
	<string name="donation_guideline">Donation Guidelines</string>
	<string name="notification_message">New blood donation event found!</string>
	<string name="drink_water">Drink plenty of water or fruit juice the night and morning before you donate.</string>
	<string name="eat_food">Eat three hours prior to the donation.</string>
	<string name="prepare_document">Prepare all identification and blood donor cards you need to take the day before and put into something that you carry with you.</string>
	<string name="rest_awhile">"Expect to be asked to rest sitting down for 10 to 20 minutes after giving blood. "</string>
	<string name="pre_donate_blood">Before Donating</string>
	<string name="post_donate_blood">After Donating</string>
	<string name="eat_something">Have a snack after the donation.</string>
	<string name="avoid_driving">Avoid driving if you feel the least bit faint.</string>
	<string name="eat_protein">Eat a meal high in protein after your donation</string>
	<string name="avoid_alcohol">Refrain from drinking alcohol for at least 8 hours after giving blood</string>
	<string name="no_exercise">Excuse yourself from heavy lifting for the rest of the day</string>
	<string name="if_unwell">If you feel unwell at any stage after giving blood, call the blood service or see your doctor</string>
	<string name="sign_up_again">Sign up for another time.</string>
	<string name="home">Home</string>
	
</resources>