<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#780505" />

    <TextView
        android:id="@+id/profile_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/post_reg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_blood_type_title"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#780505" />

    <Spinner
        android:id="@+id/select_blood_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/blood_type" />

    <TextView
        android:id="@+id/post_reg_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_blood_type_desc"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:textColor="#780505" />

    <Button
        android:id="@+id/post_reg_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:textColor="#FFFFFF"
        android:text="@string/submit" />
    
</LinearLayout>