<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_bg" >

    <TextView
        android:id="@+id/event_id"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#780505"
        android:text="@string/event_id"
        android:visibility="gone" />

    <TextView
        android:id="@+id/event_title"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textColor="#780505"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/event_desc"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#780505"
        android:text="@string/description" />

    <TextView
        android:id="@+id/event_date"
        android:textStyle="italic"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#780505"
        android:text="@string/event_date" />

</LinearLayout>