<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/about_bg_red">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#780505"
        android:textIsSelectable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDFFFFFF" >

        <TextView
            android:id="@+id/keyhash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/organiser"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_organiser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:textIsSelectable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDFFFFFF" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/event_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:textIsSelectable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDFFFFFF" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/location"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:textIsSelectable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDFFFFFF" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/starttime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_starttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:textIsSelectable="false" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDFFFFFF" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/endtime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_endtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:textIsSelectable="false" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/other"
        android:textStyle="bold"
        android:background="#EEFFFFFF" />

    <TextView
        android:id="@+id/detail_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textIsSelectable="false"
        android:background="#EEFFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/request_type"
        android:background="#EEFFFFFF"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/detail_request_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingLeft="15dp"
        android:textIsSelectable="false"
        android:background="#EEFFFFFF" />

    <Button
        android:id="@+id/fb_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/fb_btn"
        android:paddingLeft="50dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/share" />

</LinearLayout>