<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010-present Facebook.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/about_bg_red"
    android:orientation="vertical" >
 
    <TextView
        android:id="@+id/instructionsOrLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:autoLink="web"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#780505"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLoginLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructionsOrLink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/fb_btn"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_above="@+id/instructionsOrLink"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bd_icon" />

    <Button
        android:id="@+id/button_goto_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLoginLogout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_btn"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    
</RelativeLayout>
